--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:6bQ23zR92KarjPUUMsLPOObXyqX+bAz3x2IxB8h5N0I=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://perpustakaan.test
+APP_URL=http://perpustakaan-laravel.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -26,7 +26,7 @@ DB_DATABASE=laravel_perpustakaan
 DB_USERNAME=root
 DB_PASSWORD=root
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
